crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__field__call_nonfunction_field.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/call_nonfunction_field.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: not callable: `"not fn"` is of type `String`
   ╭─[craftinginterpreters/test/field/call_nonfunction_field.lox:6:1]
   │
 6 │ foo.bar(); // expect runtime error: Can only call functions and classes.
   │ ───┬───  
   │    ╰───── this expression is of type `String`
───╯
