crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__field__get_on_num.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/get_on_num.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: only instances have properties, but `123` is of type `Number`
   ╭─[craftinginterpreters/test/field/get_on_num.lox:1:1]
   │
 1 │ 123.foo; // expect runtime error: Only instances have properties.
   │ ───  
   │       
───╯
