crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__field__get_on_string.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/get_on_string.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: only instances have properties, but `str` is of type `String`
   ╭─[craftinginterpreters/test/field/get_on_string.lox:1:1]
   │
 1 │ "str".foo; // expect runtime error: Only instances have properties.
   │ ─────  
   │         
───╯
